i18n bei vielen Oberflächen eingeführt. Eine neue ViewBuilder-Klasse eingeführt, die die übliche FXMLLoader-Prozedur ersetzt. Da (grade modale) Dialog eine Stage benötigen, wurde eine Annotation InjectStage eingeführt, die die Methode kennzeichnet, über die die Stage eingefügt werden kann

--- a/src/main/resources/views/addInstanceView.fxml
+++ b/src/main/resources/views/addInstanceView.fxml
@@ -20,18 +20,18 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="Klasse" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+            <Label text="%ui.add_instance.label_class" GridPane.columnSpan="2" GridPane.rowIndex="1" />
             <TreeView fx:id="classTree" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="2" />
-            <Label text="Name" />
-            <TextField fx:id="txtInstanceName" promptText="Name der Instanz" GridPane.columnIndex="1" />
+            <Label text="%ui.add_instance.label_name" />
+            <TextField fx:id="txtInstanceName" promptText="%ui.add_instance.placeholder_name" GridPane.columnIndex="1" />
             <Separator prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="3" />
             <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnSpan="2" GridPane.rowIndex="4">
                <children>
-                  <Button mnemonicParsing="false" onAction="#onCancel" text="Abbrechen" />
-                  <Button mnemonicParsing="false" onAction="#onCreateInstance" text="Erstellen" />
+                  <Button mnemonicParsing="false" onAction="#onCancel" text="%ui.add_instance.btn_cancel" />
+                  <Button mnemonicParsing="false" onAction="#onCreateInstance" text="%ui.add_instance.btn_create" />
                </children>
             </HBox>
-            <TextField fx:id="txtClassName" editable="false" promptText="Name der Klasse" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="txtClassName" editable="false" promptText="%ui.add_instance.placeholder_class" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
