--- a/src/main/resources/views/caseBaseView.fxml
+++ b/src/main/resources/views/caseBaseView.fxml
@@ -23,16 +23,19 @@
                      <padding>
                         <Insets bottom="-2.0" left="-2.0" right="-2.0" top="-2.0" />
                      </padding>
+                     <tooltip>
+                        <Tooltip text="%ui.case_base_view.tooltip_import_case" />
+                     </tooltip>
                   </Button>
               </items>
             </ToolBar>
             <Accordion fx:id="accordionLeft">
               <panes>
-                <TitledPane text="Suche">
+                <TitledPane text="%ui.case_base_view.search_id">
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <TextField fx:id="txtSearchCaseID" layoutX="14.0" layoutY="14.0" onKeyTyped="#onSearchCaseID" promptText="Suche nach Fall-ID..." AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+                              <TextField fx:id="txtSearchCaseID" layoutX="14.0" layoutY="14.0" onKeyTyped="#onSearchCaseID" promptText="%ui.case_base_view.search_id_placeholder" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
                            </children>
                         </AnchorPane>
                   </content>
@@ -41,9 +44,9 @@
             </Accordion>
             <TableView fx:id="tblCaseBase" prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
               <columns>
-                <TableColumn fx:id="tcCaseId" prefWidth="362.0" text="Fall-ID" />
-                  <TableColumn fx:id="tcViewCase" minWidth="100.0" prefWidth="100.0" text="Fall ansehen" />
-                  <TableColumn fx:id="tcDeleteCase" minWidth="100.0" prefWidth="100.0" text="Fall löschen" />
+                <TableColumn fx:id="tcCaseId" prefWidth="362.0" text="%ui.case_base_view.case_id" />
+                  <TableColumn fx:id="tcViewCase" minWidth="100.0" prefWidth="100.0" text="%ui.case_base_view.column_show_case" />
+                  <TableColumn fx:id="tcDeleteCase" minWidth="100.0" prefWidth="100.0" text="%ui.case_base_view.column_delete_case" />
               </columns>
             </TableView>
          </children>
