--- a/src/main/resources/views/queryeditor/queryView.fxml
+++ b/src/main/resources/views/queryeditor/queryView.fxml
@@ -11,31 +11,33 @@
          <children>
             <ToolBar prefHeight="40.0" prefWidth="200.0">
               <items>
-                <Button mnemonicParsing="false" onAction="#onStartRetrieval" text="Anfrage starten..." />
+                <Button mnemonicParsing="false" onAction="#onStartRetrieval" text="%ui.query_view.btn_start_request" />
               </items>
             </ToolBar>
             <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
               <tabs>
-                <Tab closable="false" text="Neuer Fall">
+                <Tab closable="false" text="%ui.query_view.tab_new_case">
                   <content>
                     <AnchorPane fx:id="paneCase" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                        <fx:include fx:id="caseView" source="../caseView.fxml"/>
+                       <children>
+                           <fx:include fx:id="caseView" source="../caseView.fxml" />
+                       </children>
                     </AnchorPane>
                   </content>
                      <graphic>
-                        <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true" >
+                        <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../../icons/instance.png" />
                             </image>
                         </ImageView>
                      </graphic>
                 </Tab>
-                <Tab text="Gewichte">
+                <Tab text="%ui.query_view.tab_weights">
                   <content>
                     <AnchorPane fx:id="paneWeights" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                   </content>
                     <graphic>
-                        <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true" >
+                        <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../../icons/settings.png" />
                             </image>
