--- a/src/main/resources/views/saveAsNewView.fxml
+++ b/src/main/resources/views/saveAsNewView.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
 <AnchorPane maxHeight="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SaveAsNewViewController">
    <children>
       <GridPane hgap="5.0" prefWidth="400.0" vgap="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -19,13 +18,13 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="Neue Fall-ID" />
-            <TextField fx:id="txtCaseID" promptText="Neue Fall-ID..." GridPane.columnIndex="1" />
+            <Label text="%ui.save_as_new.label_new_case_id" />
+            <TextField fx:id="txtCaseID" promptText="%ui.save_as_new.placeholder_new_case_id" GridPane.columnIndex="1" />
             <Separator GridPane.columnSpan="2" GridPane.rowIndex="1" />
             <HBox alignment="CENTER_RIGHT" prefHeight="100.0" spacing="5.0" GridPane.columnSpan="2" GridPane.rowIndex="2">
                <children>
-                  <Button mnemonicParsing="false" onAction="#onCancel" text="Abbrechen" />
-                  <Button mnemonicParsing="false" onAction="#onSave" text="Speichern" />
+                  <Button mnemonicParsing="false" onAction="#onCancel" text="%ui.save_as_new.btn_cancel" />
+                  <Button mnemonicParsing="false" onAction="#onSave" text="%ui.save_as_new.btn_save" />
                </children>
             </HBox>
          </children>
