--- a/src/main/resources/views/addInstanceView.fxml
+++ b/src/main/resources/views/addInstanceView.fxml
@@ -9,8 +9,9 @@
    <children>
       <GridPane hgap="5.0" layoutX="327.0" layoutY="93.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" vgap="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="488.0" minWidth="10.0" prefWidth="449.0" />
+          <ColumnConstraints hgrow="ALWAYS" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" />
+          <ColumnConstraints hgrow="ALWAYS" maxWidth="488.0" minWidth="10.0" prefWidth="158.0" />
+            <ColumnConstraints hgrow="NEVER" maxWidth="488.0" minWidth="10.0" prefWidth="72.0" />
         </columnConstraints>
         <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
@@ -22,19 +23,24 @@
         </rowConstraints>
          <children>
             <Label text="%ui.add_instance.label_class" GridPane.columnSpan="2" GridPane.rowIndex="2" />
-            <TreeView fx:id="classTree" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+            <TreeView fx:id="classTree" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" />
             <Label text="%ui.add_instance.label_name" />
-            <TextField fx:id="txtInstanceName" promptText="%ui.add_instance.placeholder_name" GridPane.columnIndex="1" />
-            <Separator prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="4" />
-            <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnSpan="2" GridPane.rowIndex="5">
+            <TextField fx:id="txtInstanceName" promptText="%ui.add_instance.placeholder_name" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" />
+            <Separator prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="4" />
+            <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="5">
                <children>
                   <Button mnemonicParsing="false" onAction="#onCancel" text="%ui.add_instance.btn_cancel" />
                   <Button mnemonicParsing="false" onAction="#onCreateInstance" text="%ui.add_instance.btn_create" />
                </children>
             </HBox>
-            <TextField fx:id="txtClassName" editable="false" promptText="%ui.add_instance.placeholder_class" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="txtClassName" editable="false" promptText="%ui.add_instance.placeholder_class" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="2" />
             <Label text="%ui.add_instance.label_label" GridPane.rowIndex="1" />
-            <TextField fx:id="txtInstanceLabel" promptText="%ui.add_instance.placeholder_label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="txtInstanceLabel" editable="false" promptText="%ui.add_instance.placeholder_label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#onTranslateString" text="%ui.add_instance.btn_change_label" />
+               </children>
+            </HBox>
          </children>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
