--- a/src/main/resources/views/commons/waitView.fxml
+++ b/src/main/resources/views/commons/waitView.fxml
@@ -4,10 +4,9 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.commons.WaitViewController">
    <children>
       <ProgressIndicator layoutX="48.0" layoutY="49.0" />
-      <Label fx:id="lblText" layoutX="129.0" layoutY="68.0" text="Bitte warten..." />
+      <Label fx:id="lblText" layoutX="129.0" layoutY="68.0" text="%ui.commons.waitView.defaultText" />
    </children>
 </AnchorPane>
