--- a/src/main/resources/views/caseView.fxml
+++ b/src/main/resources/views/caseView.fxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.embed.swing.*?>
 <?import javafx.embed.swing.SwingNode?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+
 <!--suppress JavaFxDefaultTag -->
+
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CaseViewController">
    <children>
       <HBox prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -137,7 +141,7 @@
                   </TitledPane>
                </children>
             </VBox>
-            <SplitPane dividerPositions="0.7" prefHeight="160.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+            <SplitPane dividerPositions="0.6067864271457086" prefHeight="160.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
               <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                      <children>
@@ -150,7 +154,7 @@
                            <children>
                               <HBox alignment="CENTER_RIGHT" prefWidth="200.0" spacing="5.0">
                                  <children>
-                                    <Label maxWidth="1000.0" prefWidth="1000.0" text="%ui.case_view.label_datatype_property" />
+                                    <Label fx:id="lblSelectionName" maxWidth="1000.0" prefWidth="1000.0" text="%ui.case_view.label_datatype_property" />
                                     <Button mnemonicParsing="false" onAction="#onAddDataProperty">
                                        <graphic>
                                           <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
